# libsharlayan

./: LICENSE  README.md  libsharlayan.cabal
src/Control/Monad/: TakeWhileM.hs
src/Data/Krile/Sharlayan/: FreeCompany.hs  News.hs  User.hs
src/Network/Protocol/HTTP/: Parser.hs
