name:                libsharlayan
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/callummance/libsharlayan#readme
license:             BSD3
license-file:        LICENSE
author:              Callum Mance
maintainer:          callummance@gmail.com
copyright:           Copyright Callum Mance 2017-2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Krile.Sharlayan.News
                       Data.Krile.Sharlayan.User
                       Data.Krile.Sharlayan.FreeCompany
                       Control.Monad.TakeWhileM
                       Network.Protocol.HTTP.Parser
  build-depends:       base >= 4.7 && < 5,
                       tagsoup >= 0.14.1,
                       HTTP >= 4000,
                       time,
                       network-uri,
                       split
  default-language:    Haskell2010

test-suite libsharlayan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , libsharlayan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/callummance/libsharlayan
